--- a/notebooks/unit1/unit1.ipynb
+++ b/notebooks/unit1/unit1.ipynb
@@ -638,7 +638,8 @@
         "# TODO: Define a PPO MlpPolicy architecture\n",
         "# We use MultiLayerPerceptron (MLPPolicy) because the input is a vector,\n",
         "# if we had frames as input we would use CnnPolicy\n",
-        "model ="
+        "# model = PPO('MlpPolicy', env, verbose=1)\n",
+        "# model.learn(total_timesteps=int(2e5))"
       ]
     },
     {
@@ -692,6 +693,7 @@
       "outputs": [],
       "source": [
         "# TODO: Train it for 1,000,000 timesteps\n",
+        "model.learn(total_timesteps=int(1e6))\n",
         "\n",
         "# TODO: Specify file name for model and save the model to file\n",
         "model_name = \"ppo-LunarLander-v2\"\n"
