--- a/notebooks/unit1/unit1.ipynb
+++ b/notebooks/unit1/unit1.ipynb
@@ -226,6 +226,15 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FruKwDfCN4t1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "9XaULfDZDvrC"
@@ -700,6 +709,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# save model\n",
+        "model.save(model_name)"
+      ],
+      "metadata": {
+        "id": "xL3D8eD0GH6q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "1bQzQ-QcE3zo"
@@ -749,15 +770,23 @@
       },
       "outputs": [],
       "source": [
+        "from stable_baselines3.common.evaluation import evaluate_policy\n",
         "# TODO: Evaluate the agent\n",
         "# Create a new environment for evaluation\n",
-        "eval_env =\n",
+        "# eval_env = gym.make(\"LunarLander-v2\", render_mode=\"rgb_array\")\n",
         "\n",
-        "# Evaluate the model with 10 evaluation episodes and deterministic=True\n",
-        "mean_reward, std_reward =\n",
+        "# model = PPO.load(model_name, env=eval_eval)\n",
         "\n",
-        "# Print the results\n",
-        "\n"
+        "# # Evaluate the model with 10 evaluation episodes and deterministic=True\n",
+        "# mean_reward, std_reward = evaluate_policy(model, model.get_env(), n_eval_episodes=10)\n",
+        "\n",
+        "# # Print the results\n",
+        "# vec_env = model.get_env()\n",
+        "# obs = vec_env.reset()\n",
+        "# for i in range(1000):\n",
+        "#     action, _states = model.predict(obs, deterministic=True)\n",
+        "#     obs, rewards, dones, info = vec_env.step(action)\n",
+        "#     # vec_env.render(\"human\")"
       ]
     },
     {
@@ -905,20 +934,20 @@
         "\n",
         "## TODO: Define a repo_id\n",
         "## repo_id is the id of the model repository from the Hugging Face Hub (repo_id = {organization}/{repo_name} for instance ThomasSimonini/ppo-LunarLander-v2\n",
-        "repo_id =\n",
+        "repo_id = \"martini9393/deep-rl-course\"\n",
         "\n",
         "# TODO: Define the name of the environment\n",
-        "env_id =\n",
+        "env_id = \"LunarLander-v2\"\n",
         "\n",
         "# Create the evaluation env and set the render_mode=\"rgb_array\"\n",
         "eval_env = DummyVecEnv([lambda: Monitor(gym.make(env_id, render_mode=\"rgb_array\"))])\n",
         "\n",
         "\n",
         "# TODO: Define the model architecture we used\n",
-        "model_architecture = \"\"\n",
+        "model_architecture = \"PPO\"\n",
         "\n",
         "## TODO: Define the commit message\n",
-        "commit_message = \"\"\n",
+        "commit_message = \"Deep RL course colab 1\"\n",
         "\n",
         "# method save, evaluate, generate a model card and record a replay video of your agent before pushing the repo to the hub\n",
         "package_to_hub(model=model, # Our trained model\n",
@@ -1059,6 +1088,7 @@
       "outputs": [],
       "source": [
         "from huggingface_sb3 import load_from_hub\n",
+        "from stable_baselines3 import PPO\n",
         "repo_id = \"Classroom-workshop/assignment2-omar\" # The repo_id\n",
         "filename = \"ppo-LunarLander-v2.zip\" # The model filename.zip\n",
         "\n",
@@ -1095,6 +1125,9 @@
       "outputs": [],
       "source": [
         "#@title\n",
+        "import gymnasium as gym\n",
+        "\n",
+        "\n",
         "eval_env = Monitor(gym.make(\"LunarLander-v2\"))\n",
         "mean_reward, std_reward = evaluate_policy(model, eval_env, n_eval_episodes=10, deterministic=True)\n",
         "print(f\"mean_reward={mean_reward:.2f} +/- {std_reward}\")"
